# medical_holding

./: .gitignore  pyproject.toml
medical_holding/: manage.py
medical_holding/main/: .views.py.un~  forms.py  models.py  tests_forms.py  urls.py  validators.py  views.py
medical_holding/main/migrations/: 0001_initial.py  0002_alter_appointmentdoctor_unique_together.py
medical_holding/main/static/main/css/: appointment_list.css  comment.css  form.css  home.css  main.css  organization_branch_list.css  organization_employee_list.css  organization_profile.css  profile_user.css  service_list.css  services_view.css  variables.css
medical_holding/main/templates/includes/: notification.html
medical_holding/main/templates/main/: appointment_organization_list.html  base.html  change_comment_service.html  change_organization_profile.html  change_profile_user.html  form_branch_organization.html  form_employee_organization.html  form_service_organization.html  home.html  login.html  organization_branch_list.html  organization_employee_list.html  organization_profile.html  profile_user.html  register_organization.html  service_list.html  services_view.html  signup.html
medical_holding/medical_holding/: asgi.py  settings.py  wsgi.py
